# PRECISE

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
example/: 2QCS_surface.ply  3WBB_NAP.sdf  3WBB_binding_scores.ply
example/colored_surfaces/: 2QCS_surface_hydrophilicity_h-bond.ply  2QCS_surface_hydrophobicity.ply  2QCS_surface_poisson-boltzmann_electrostatics.ply  2QCS_surface_shape_index_curvature.ply
example/temp/: io.mc
notebooks/: compare-differences.ipynb
precise/: cli.py  loader.py  processing_data.py
precise/commands/: create_surface.py  install_tools.py  pocket_detect.py  screen.py  training_dti.py
precise/dataset/: __init__.py  dti_dataset.py  precise_dataset.py
precise/lightning/: dti.py
precise/models/: __init__.py  precise_dti.py
precise/pocket_detection/: inference.py  utils.py
precise/preprocess/: install_tools.py  msms_pipeline.py
precise/screening/: __init__.py  clustering.py  codes.py  docking.py
precise/utils/: __init__.py  constants.py  model_hub.py  visualization.py
results/: dendrogram.npy  depth-1.scores.csv  depth-10.scores.csv  depth-11.scores.csv  depth-12.scores.csv  depth-13.scores.csv  depth-14.scores.csv  depth-15.scores.csv  depth-16.scores.csv  depth-17.scores.csv  depth-2.scores.csv  depth-3.scores.csv  depth-4.scores.csv  depth-5.scores.csv  depth-6.scores.csv  depth-7.scores.csv  depth-8.scores.csv  depth-9.scores.csv  docking_results_cluster_representatives.csv  ligand.pdbqt  ligand.sdf  ligand_out.pdbqt  receptor.pdbqt  receptor.ply  selected_smiles.csv
results/temp/: io.mc
(+29 files in other folders)
